django_api/k8s/deployment-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-example
spec: 
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'sleep 3600']
    volumeMounts:
    - mountPath: /host
      name: host-volume # Associando o volume
  volumes: # Criando volume no host
    - name: host-volume
      hostPath:
        path: /data
