django_api/k8s/pod.yaml
# Um pod é a menor unidade gerenciável do Kubernetes
# Ele roda containers dentro dele pode expor uma porta 
apiVersion: v1
kind: Pod
metadata:
  name: djangoapp
spec:
  containers: 
  - name: djangoapp
    image: 172.29.134.212:5000/djangoapp:latest #registry onde a imagem está armazenada
    ports:
      - containerPort: 8008
    resources:
      requests:
        cpu: "200m"          # “200 millicores” como garantia mínima
        memory: "256Mi"      # 256 MiB como garantia mínima
      limits:
        cpu: "500m"           # limite máximo de 500 millicores
        memory: "512Mi"       # limite máximo de 512 MiB
