django_api/k8s/ingress-wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wordpress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web # traefik usado com ingress controller
spec:
  rules:
    - host: "myapp.wordpress.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wordpress
                port:
                  number: 8080
